testsuite/tests/quantified-constraints/T17267b.stderr

T17267b.hs:15:12: error:
    • Reduction stack overflow; size = 201
      When simplifying the following type: a ~ b
      Use -freduction-depth=0 to disable this check
      (any upper bound you could choose might fail unpredictably with
       minor updates to GHC, so disabling the check is recommended if
       you're sure that type checking should terminate)
    • In the expression: x
      In an equation for ‘oops’: oops x = x
      In an equation for ‘uc’:
          uc
            = oops
            where
                oops :: (a ~ b => a ~ b) => a -> b
                oops x = x
